--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my 
-    first git repo</title>
+    <title>my first git repo</title>
 </head>
 <body>
-    
+    <h1>
+        <em>MY Travel Blog</em>
+    </h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Qui optio laboriosam distinctio illum consectetur, 
+            rerum iste sapiente magni unde odio atque facere 
+            perferendis, facilis, dolor amet quaerat eius eos nihil.
+            <br>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Qui optio laboriosam distinctio illum consectetur, 
+            rerum iste sapiente magni unde odio atque facere 
+            perferendis, facilis, dolor amet quaerat eius eos nihil.
+            
+            <button type="button">Read More</button>
+        </p>
+        <br>
+    </div>
+
+    <p>
+        <span style="color:blue;font-weight:bold">What I bought</span>
+    </p>
+
+    <ol>
+       <li>Cookie</li> 
+       <li>Cracker</li>
+       <li>Cake</li>
+       <li>Chocolate</li>
+       <li>Donuts</li>
+    </ol>
+    <br>
+
+    <h4>My Favorite food</h4>
+    <ul>
+        <li>Burgar</li>
+        <li>Pizza</li>
+        <li>Coffee</li>
+        <li>Ice Cream</li>
+    </ul>
+
+    <img src="download.jpeg" alt="Picture of Burgar" height="500" width="500">
+
+    <br>
+    <img src="YT.jpeg" alt="YT icon" height="20" width="25">
+    <a href="https://youtube.com/shorts/Xcp_1Gvo0AA?si=MGO8akcSd1cuIx4G" target="_blank">Make Your Won Burgar</a>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
